k8s/rest-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-deployment
spec:
  selector:
    matchLabels:
      component: rest-api-app
  template:
    metadata:
      labels:
        component: rest-api-app
    spec:
      containers:
      - name: rest-api
        image: m41na/rest-api-app
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
