k8s/rest-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-service
spec:
  type: ClusterIP
  selector:
    app: rest-api-app
  ports:
  - port: 3000
    targetPort: 3000
