k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-api-service
            port: 
              number: 3000

#  defaultBackend:
#    service:
#      name: rest-api-service
#      port:
#        number: 3000
